[package]
name = "esb_db"
version = "0.1.0"
authors = ["Joost Yervante Damad <joost@damad.be>"]

[dependencies]
badlog = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = "2.31"
diesel = { version = "1.3", features = ["postgres", "chrono", "32-column-tables"] }
dotenv = "0.9"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
