[package]
name = "esb_db"
version = "0.1.0"
authors = ["Joost Yervante Damad <joost@damad.be>"]

[dependencies]
badlog = "1.1.1"
chrono = { version = "0.4.4", features = ["serde"] }
clap = "2.32.0"
diesel = { version = "1.3.2", features = ["postgres", "chrono", "32-column-tables"] }
dotenv = "0.13.0"
log = "0.4.3"
reqwest = "0.8.6"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.22"
